--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: klink
-    shield: agar_mini_ble
+    shield: agar_mini
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
