--- a/config/agar_mini_ble.conf
+++ b/config/agar_mini_ble.conf
@@ -1,1 +1,3 @@
-CONFIG_ZMK_SETTINGS_RESET_ON_START=y
+# Deep sleep after 30 minutes of inactivity
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
