--- a/config/agar_mini_ble.conf
+++ b/config/agar_mini_ble.conf
@@ -1,3 +1,2 @@
-# Deep sleep after 60 minutes of inactivity
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+# Deep sleep disabled
+CONFIG_ZMK_SLEEP=n
