--- a/config/boards/shields/klink_kbd/boards/klink.conf
+++ b/config/boards/shields/klink_kbd/boards/klink.conf
@@ -17,8 +17,8 @@ CONFIG_BT_DEVICE_NAME="Agar Mini BLE"
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_IDLE_TIMEOUT=30000
-#CONFIG_ZMK_SLEEP=y
-#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=12000000
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 #
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_FULL=y
